--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <area target="_self" alt="Planeación Financiera" title="Planeación Financiera" href="planeacion_financiera.html" coords="558,54 814,57 833,85 821,112 555,116 570,85 " shape="polygon">
             <area target="_blank" alt="Gestión de Proyectos" title="Gestión de Proyectos" href="https://colcomerciocom.sharepoint.com/sites/IntranetPrincipal/Procesos/Biblioteca%20Procesos/Forms/Todos%20los%20Usuarios.aspx?RootFolder=%2Fsites%2FIntranetPrincipal%2FProcesos%2FBiblioteca%20Procesos%2FProcesos%20Planeaci%C3%B3n%20Dise%C3%B1o%20Seguimiento%2FGesti%C3%B3n%20de%20Proyectos&FolderCTID=0x0120002C14A7937B1049418C64C22894CD89E8" coords="863,55 1119,54 1138,85 1125,114 864,109 873,81 " shape="polygon">
             <area target="_self" alt="Gestión del Talento Humano" title="Gestión del Talento Humano" href="gestion_talento_humano.html" coords="249,614 508,614 524,645 513,671 247,672 261,641 " shape="polygon">
-            <area target="_self" alt="Gestión de Servicios Administrativos" title="Gestión de Servicios Administrativos" href="gestion_servicios_administrativos.html" coords="550,683 809,683 823,712 807,740 550,740 558,712 " shape="polygon">
+            <area target="_self" alt="Objetivo: asfsdfasf
+            sadfsfasdfas /n sdjfas" title="Gestión de Servicios Administrativos" href="gestion_servicios_administrativos.html" coords="550,683 809,683 823,712 807,740 550,740 558,712 " shape="polygon">
+            <area alt="Gestión de la Efectividad" title="Gestión de la Efectividad" href="gestion_efectividad.html" coords="268,133 526,135 538,163 526,190 268,190 280,164 " shape="polygon">
         </map>
         <script src="mageMapResizer.min.js "></script>
         <script>
